--- a/index.html
+++ b/index.html
@@ -80,9 +80,20 @@ part {
 	</div>
    <center> <h1>MY NAME IS STEVEN</h1></center>
    <div>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus ducimus pariatur, iusto fugit placeat perspiciatis qui. Exercitationem velit est quia architecto minus debitis tempore veritatis, rerum dolorum, ea culpa. Excepturi.</p>
+    <p>Hey there! I'm [Your Name], and I'm all about the rhythm of the court and the swish of the net. I've been chasing my basketball dreams since I can remember, dribbling my way through both victories and challenges.
 
-    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Vel facere unde quaerat sapiente suscipit, magni quod sed reprehenderit labore rerum ad reiciendis quia accusamus adipisci cupiditate dolorum nemo placeat numquam.</p>
+When I'm not on the court, you'll probably find me studying the game's strategies and watching matches with enthusiasm. I believe basketball is more than just a sport – it's a discipline that teaches teamwork, perseverance, and the joy of pushing limits.
+
+My journey has led me to refine my skills in shooting, dribbling, and defense. From fast breaks to last-minute shots, I thrive on the adrenaline and intensity of the game. Whether it's a pickup game at the local park or a competitive league match, I'm always eager to take my skills to the next level.
+
+Off the court, I enjoy sharing my passion by coaching aspiring players and inspiring them to embrace the sport's values. There's nothing quite like seeing a team come together, each player contributing their unique strengths to achieve a common goal.
+
+Join me as I continue my basketball journey, celebrating victories, learning from defeats, and appreciating every moment spent with a ball in hand. Let's connect, share stories, and celebrate the incredible world of basketball together!
+
+Feel free to reach out if you share the same love for the game or if you just want to shoot the breeze about hoops. See you on the court!
+
+</p>
+
    </div>
 
     <script>
